feat: inscrição até 15 min após o início do evento, e fuso horário fixo
